--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lechavezl/cse341-project1/issues"
   },
-  "homepage": "https://github.com/lechavezl/cse341-project1#readme"
+  "homepage": "https://github.com/lechavezl/cse341-project1#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
